--- a/css/comment.css
+++ b/css/comment.css
@@ -1,20 +1,5 @@
-/*页面标题的背景色*/
-.frontBackground {
-    height: 30px;
-    width: 75%;
-    background: #EFEFEF;
-    font-family: 'Microsoft Yahei';
-}
-
-.title {
-    display: inline-block;
-    letter-spacing: 3px;
-    height: 30px;
-    font-family: 'Microsoft Yahei';
-    font-size: 16px;
-    color: white;
-    background-color: #FF4400;
-}
+@charset "utf-8";
+/*收获评论页面样式*/
 
 /*华丽的分割线*/
 .splitLine {
@@ -33,6 +18,7 @@
     border: 1px #aaa solid;
 }
 
+/*单元格内的文本显示方式*/
 .cell {
     display: inline-block;
     text-align: center;
@@ -69,6 +55,7 @@
     font-size: 13px;
     color: black;
     text-decoration: none; /*消除下划线*/
+    cursor: pointer; /*鼠标悬停变为小手形状*/
 }
 
 /*鼠标悬停在商品信息上时文本变色*/
@@ -76,15 +63,12 @@
     color: blue;
 }
 
+/*“晒图片”和“剩余字数”的背景色样式*/
 .commentBackground {
     height: 30px;
     width: 440px;
     background: #EEF8FD;
     font-family: 'Microsoft Yahei';
-}
-
-.commentText {
-
 }
 
 /*上传图片按钮样式*/
@@ -126,7 +110,7 @@
     cursor: pointer;
 }
 
-/*星级评分样式及其他*/
+/*所有的星级评分样式及其他*/
 * {
     margin: 0;
     padding: 0;
@@ -191,4 +175,44 @@ ul, li {
 
 .hidden {
     display: none;
+}
+
+/*放大图片样式*/
+ul, li {
+    list-style: none;
+}
+
+.heartPic {
+    width: 0px;
+    height: 0px;
+    margin: 0px 0 0 0;
+}
+
+.heartPic ul {
+    float: left;
+    width: 200px;
+}
+
+.heartPic ul li {
+    float: left;
+    width: 100px;
+    height: 100px;
+    padding: 2px;
+    cursor: pointer;
+}
+
+.heartPic ul li.on {
+    z-index: 99;
+}
+
+.heartPic ul li.on .in {
+    position: relative;
+    left: 0px;
+    top: 0px;
+    padding: 5px 5px 20px 5px;
+    background: #666;
+}
+
+.heartPic .showDiv {
+    display: block;
 }
